[gd_scene load_steps=16 format=3 uid="uid://d1j481tvkvqik"]

[ext_resource type="Script" uid="uid://cmktp4b6qbdk4" path="res://parallax_background.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://kqw8l8sqqjku" path="res://main.gd" id="1_lquwl"]
[ext_resource type="Texture2D" uid="uid://b51kxom7buma1" path="res://offline-sprite-2x.png" id="2_h2yge"]
[ext_resource type="Script" uid="uid://dvr5mijkersgv" path="res://duck.gd" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://brtpog51umv61" path="res://Eendjes.png" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://47kgi8g2m2jh" path="res://bloemen.tscn" id="6_272bh"]
[ext_resource type="PackedScene" uid="uid://dcc2s5dxrykp5" path="res://arduinoscript.tscn" id="7_272bh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7mycd"]
radius = 27.0
height = 58.0

[sub_resource type="Animation" id="Animation_1bvp3"]
resource_name = "DUCK"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:region_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lquwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:region_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7mycd"]
resource_name = "RUNNING"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:region_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_272bh"]
resource_name = "down"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:region_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vw27"]
_data = {
&"DUCK": SubResource("Animation_1bvp3"),
&"RESET": SubResource("Animation_lquwl"),
&"RUNNING": SubResource("Animation_7mycd"),
&"down": SubResource("Animation_272bh")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7mycd"]
radius = 26.17

[sub_resource type="RectangleShape2D" id="RectangleShape2D_272bh"]
size = Vector2(1152.5, 24.5)

[node name="Main" type="Node2D"]
process_mode = 3
z_index = 4096
script = ExtResource("1_lquwl")
FLOWER = ExtResource("6_272bh")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("1_0xm2m")

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
offset_right = 1153.0
offset_bottom = 337.0

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1024, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Clouds"]
position = Vector2(200, 50)
texture = ExtResource("2_h2yge")
region_enabled = true
region_rect = Rect2(164.934, 2, 93.0656, 27)

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/Clouds"]
position = Vector2(400, 20)
texture = ExtResource("2_h2yge")
region_enabled = true
region_rect = Rect2(164.934, 2, 93.0656, 27)

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/Clouds"]
position = Vector2(600, 70)
texture = ExtResource("2_h2yge")
region_enabled = true
region_rect = Rect2(164.934, 2, 93.0656, 27)

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/Clouds"]
position = Vector2(800, 100)
texture = ExtResource("2_h2yge")
region_enabled = true
region_rect = Rect2(164.934, 2, 93.0656, 27)

[node name="Floor" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1200, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Floor"]
position = Vector2(0, 300)
texture = ExtResource("2_h2yge")
centered = false
region_enabled = true
region_rect = Rect2(2, 104, 2400, 24)

[node name="Duck" type="CharacterBody2D" parent="."]
disable_mode = 2
collision_layer = 2
script = ExtResource("3_1bvp3")
jump_force = 700.0

[node name="Sprite2D" type="Sprite2D" parent="Duck"]
position = Vector2(99, 280)
scale = Vector2(1.8, 1.45208)
texture = ExtResource("4_1bvp3")
hframes = 10
region_rect = Rect2(60, 32, 21, 28)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Duck"]
position = Vector2(96, 297)
shape = SubResource("CapsuleShape2D_7mycd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Duck"]
libraries = {
&"": SubResource("AnimationLibrary_5vw27")
}

[node name="Area2D" type="Area2D" parent="Duck"]
position = Vector2(106, 303)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Duck/Area2D"]
shape = SubResource("CircleShape2D_7mycd")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(576.25, 336.25)
shape = SubResource("RectangleShape2D_272bh")

[node name="ArduinoScript" parent="." instance=ExtResource("7_272bh")]
SkipFrames = 0

[node name="Timer" type="Timer" parent="."]

[node name="Duration" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="WinLabel" type="Label" parent="."]
visible = false
offset_left = 250.0
offset_top = 86.0
offset_right = 468.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Yay you won!
You rescued your babyduck."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
offset_left = 19.0
offset_top = 16.0
offset_right = 62.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Time: "

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(196, 161)
zoom = Vector2(0.4, 0.4)

[connection signal="area_entered" from="Duck/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Duck/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="CustomInput" from="ArduinoScript" to="." method="_on_arduino_script_custom_input"]
[connection signal="CustomInput" from="ArduinoScript" to="Duck" method="_on_arduino_script_custom_input"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_timer_2_timeout"]
